--- a/css/vision_large.css
+++ b/css/vision_large.css
@@ -4,8 +4,7 @@
 	padding:0;
 }
 body{
-	background-image:url(../img/background2.jpg);
-	background-repeat: no-repeat;
+	background:#031426;
 	background-size:auto;
 }
 
