--- a/css/vision_sm.css
+++ b/css/vision_sm.css
@@ -4,11 +4,8 @@
 	padding:0;
 }
 body{
-	background-image:url(../img/background2.jpg);
-	background-repeat:repeat;
+	background:#031426;
 	background-size:auto;
-	overflow-x: hidden;
-	overflow-y: scroll;
 }
 
 #changbg{
