--- a/css/vision_xm.css
+++ b/css/vision_xm.css
@@ -4,13 +4,8 @@
 	padding:0;
 }
 body{
-	background-image:url(../img/background2.jpg);
-	background-repeat:repeat;
+	background:#031426;
 	background-size:auto;
-	overflow-x: hidden;
-	
-	min-width:380px;
-	
 }
 
 #changbg{
